--- a/assets/scss/sass-utils/_variables.scss
+++ b/assets/scss/sass-utils/_variables.scss
@@ -1,5 +1,4 @@
-:root {
-    --background-color: hsla(0, 0%, 0%, 1);
-    --text-color-white:hsla(360, 100%, 100%, 1);
-    --text-color-black:hsla(0, 0%, 0%, 1);
-}
+$play:'Playfair Display', Sans-serif;
+$work:'Work Sans', Sans-serif;
+
+
