--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,5 +1,7 @@
 @use '../sass-utils/variables';
-
+i {
+    font-family: “FontAwesome”;
+}
 .new-branding  {
 
     background-image: url(../assets/images/CVupdateENG.jpg);
@@ -36,8 +38,99 @@
         font-style: italic;
         font-weight:100;
     }
-
-
-
-
+    &__icon { 
+       position:absolute;
+       bottom:-20px;
+       left:50%;
+       transform: translateX(-50%);
+        & svg {
+            & path {
+                fill:#FFFF;
+                    }
+    }
 }
+}
+.about {
+    padding:100px;
+        &__big--dark, & p, & img {
+            text-align:center;
+        }
+        &__big--dark {
+            font-size:40px;
+            font-weight:600;
+        }
+        & p {
+            font-family: variables.$work;
+            letter-spacing: normal;
+            font-weight:200;
+            font-size:15px;
+            margin:20px;
+        }
+        &.container {
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        & img {
+            width:150px;
+        }   
+}
+.icon-list {
+    background-image: url('../../assets/images/black-bg-pattern.jpg');
+    background-size:cover;
+    padding:60px 0;
+
+    & .container {
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    &__box {
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    &__icon-div {
+        width:20%;
+        color:var(--text-color-white);
+    }
+    &__icon-desc {
+        width:80%;
+        font-size:11px;
+        color:var(--text-color-white);
+    }
+}
+.best {
+    padding:60px 0;
+    &__big--dark, & p {
+        text-align: center;
+    }
+
+    &__big--dark {
+        font-size:40px;
+        font-weight:600;
+    }
+    & p {
+        font-family: variables.$work;
+        letter-spacing: normal;
+        font-weight:200;
+        font-size:15px;
+        margin:20px;
+        color:rgb(54, 54, 54);
+    }
+    &__gallery {
+        display:flex;
+        align-items:center;
+        flex-wrap: wrap;
+    }
+    &__gallery a {
+        width:30%;
+        margin:10px;
+    }
+    &__gallery img {
+        width:100%;
+    }
+}
+
+
+
