--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -132,5 +132,62 @@ i {
     }
 }
 
+.testimonial {
+    background-image: url('../../assets/images/black-bg-pattern.jpg');
+    background-size:cover;
+    padding:60px 0;
+    width:100%;
+    padding:0;
+    margin:0;
+    
 
+  
+    &__content {
+        position:relative;
+        max-width:900px;
+        width:100%;
+        display:flex;
+        justify-content: center;
+        align-items:center;
+    }
+
+    &__slide {
+        text-align:center;
+        font-family: variables.$play;
+        color:var(--text-color-white);
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+
+        
+        & blockquote {
+            font-style: italic;
+            font-size:20px;
+            font-weight:200;
+            letter-spacing:2px;
+        }
+    }
+
+    &__author {
+        text-transform: uppercase;
+        font-family: variables.$work;
+        font-size:15px;
+    }
+     
+}
+
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+  }
 
