--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -137,46 +137,21 @@ i {
     background-size:cover;
     
     
-
-  
-    &__content {
-        
-    }
-
-    &__slide {
-        text-align:center;
-        font-family: variables.$play;
+    
+    & .carousel-item p {
         color:var(--text-color-white);
-        
-
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        flex-direction: column;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-
-        
-        & blockquote {
-            font-style: italic;
-            font-size:20px;
-            font-weight:200;
-            letter-spacing:2px;
-            padding:0 160px;
-        }
     }
+    & .carousel-item {
+        height:32rem;
+        position:relative;
 
-    &__author {
-        text-transform: uppercase;
-        font-family: variables.$work;
-        font-size:15px;
+        &  .container {
+            position:absolute;
+            bottom:0;
+            left:0;
+            right:0;
+            
+        }
     }
      
 }
