--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -156,5 +156,19 @@ i {
      
 }
 
+.partners {
+
+    &__logo-box {
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    & img {
+        max-width:200px;
+    }
+}
+
 
 
