--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -5,6 +5,9 @@
         & li.button button {
             background-color:var(--text-color-black);
             color:var(--text-color-white);
+            padding:10px 30px;
+            font-size:15px;
+            border:none;
         }
     }
 }
