--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -89,15 +89,15 @@ i {
         display:flex;
         flex-direction: row;
         flex-wrap: wrap;
+        color:var(--text-color-white);
     }
     &__icon-div {
-        width:20%;
-        color:var(--text-color-white);
+       margin: 0 20px;
+        
     }
     &__icon-desc {
-        width:80%;
+       
         font-size:11px;
-        color:var(--text-color-white);
     }
 }
 .best {
@@ -131,30 +131,79 @@ i {
         width:100%;
     }
 }
-
-.testimonial {
+// poukladac potem
+.slider {
     background-image: url('../../assets/images/bg-pattern.jpg');
     background-size:cover;
+    color:red;
     
-    
-    
-    & .carousel-item p {
-        color:var(--text-color-white);
-    }
-    & .carousel-item {
-        height:32rem;
-        position:relative;
-
-        &  .container {
-            position:absolute;
-            bottom:0;
-            left:0;
-            right:0;
-            
-        }
-    }
      
+
+         
+
+    }
+    .testimonial {
+        height:100%;
+        width:100%;
+        overflow: hidden;
+    }
+
+
+.hero {
+    height:500px;
+    padding:50px 0;
+    text-align:center;
+    position:relative;
 }
+.cont {
+    width:800px;
+    height:400px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+} 
+.slide-row {
+    display:flex;
+    width:2600px;
+    transition:.5s;
+}
+.slide-col {
+    width:800px;
+    height:400px;
+    position:relative;
+}
+.user-text {
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+.indicator {
+    position: absolute;
+    left:50%;
+    transform:translate(-50%, -50%);
+    bottom:-50px;
+}
+span.btnn {
+    display:inline-block;
+    height:15px;
+    width:15px;
+    margin:4px;
+    border-radius:15px;
+    background:rgb(255, 255, 255);
+    cursor:pointer;
+    transition:.5s;
+}
+span.btnn.active {
+    width:45px;
+}
+
+// poukladac potem
+
+
+
 
 .partners {
     padding: 50px 0;
@@ -163,6 +212,7 @@ i {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        flex-wrap:wrap;
     }
     
     & img {
