--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -131,79 +131,69 @@ i {
         width:100%;
     }
 }
-// poukladac potem
+
 .slider {
     background-image: url('../../assets/images/bg-pattern.jpg');
     background-size:cover;
     color:red;
     
-     
-
-         
-
-    }
-    .testimonial {
+    & .testimonial {
         height:100%;
         width:100%;
         overflow: hidden;
     }
-
-
-.hero {
-    height:500px;
-    padding:50px 0;
-    text-align:center;
-    position:relative;
-}
-.cont {
-    width:800px;
-    height:400px;
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-} 
-.slide-row {
-    display:flex;
-    width:2600px;
-    transition:.5s;
-}
-.slide-col {
-    width:800px;
-    height:400px;
-    position:relative;
-}
-.user-text {
-    height:100%;
-    display:flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-}
-.indicator {
-    position: absolute;
-    left:50%;
-    transform:translate(-50%, -50%);
-    bottom:-50px;
-}
-span.btnn {
-    display:inline-block;
-    height:15px;
-    width:15px;
-    margin:4px;
-    border-radius:15px;
-    background:rgb(255, 255, 255);
-    cursor:pointer;
-    transition:.5s;
-}
-span.btnn.active {
-    width:45px;
-}
-
-// poukladac potem
-
-
-
+    & .hero {
+        height:500px;
+        padding:50px 0;
+        text-align:center;
+        position:relative;
+    }
+    & .cont {
+        width:800px;
+        height:400px;
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%,-50%);
+    } 
+    & .slide-row {
+        display:flex;
+        width:2600px;
+        transition:.5s;
+    }
+    & .slide-col {
+        width:800px;
+        height:400px;
+        position:relative;
+    }
+   & .user-text {
+        height:100%;
+        display:flex;
+        flex-direction:column;
+        justify-content: center;
+        align-items: center;
+    }
+    & .indicator {
+        position: absolute;
+        left:50%;
+        transform:translate(-50%, -50%);
+        bottom:-50px;
+    }
+    & span.btnn {
+        display:inline-block;
+        height:15px;
+        width:15px;
+        margin:4px;
+        border-radius:15px;
+        background:rgb(255, 255, 255);
+        cursor:pointer;
+        transition:.5s;
+    }
+    & span.btnn.active {
+        width:45px;
+    }
+    }
+   
 
 .partners {
     padding: 50px 0;
