--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -17,7 +17,7 @@ i {
         height:100%;
     }
     
-    &__caps, &__big--white, &__big--italic {
+    &__caps, &__big--white, &__big--itali c {
         text-align: center;
         color:var(--text-color-white);
 
@@ -84,20 +84,27 @@ i {
         display:flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
+    }
+    & .row {
+        justify-content: center;
     }
     &__box {
         display:flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
         color:var(--text-color-white);
+        padding:0 5px;
     }
     &__icon-div {
-       margin: 0 20px;
+       width:100%;
+       text-align:center;
+       margin-bottom:10px;
         
     }
     &__icon-desc {
-       
+        width:100%;
         font-size:11px;
+        text-align:center;
     }
 }
 .best {
@@ -120,7 +127,7 @@ i {
     }
     &__gallery {
         display:flex;
-        align-items:center;
+        justify-content:center;
         flex-wrap: wrap;
     }
     &__gallery a {
@@ -135,7 +142,7 @@ i {
 .slider {
     background-image: url('../../assets/images/bg-pattern.jpg');
     background-size:cover;
-    color:red;
+    color:var(--text-color-white);
     
     & .testimonial {
         height:100%;
@@ -172,6 +179,18 @@ i {
         flex-direction:column;
         justify-content: center;
         align-items: center;
+        
+    }
+    & .user-text p {
+        font-family: variables.$play;
+        font-style:italic;
+        font-size:20px;
+        font-weight:300;
+        letter-spacing:2px;
+    }
+    & .user-text h4 {
+        text-transform: uppercase;
+        font-size:15px;
     }
     & .indicator {
         position: absolute;
