--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -29,6 +29,7 @@
         & i {
             font-size:1.5em;
             padding:10px;
+            cursor: pointer;
         }
         & ul {
             padding:0;
