--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -140,78 +140,83 @@ i {
 }
 
 .slider {
-    background-image: url('../../assets/images/bg-pattern.jpg');
-    background-size:cover;
-    color:var(--text-color-white);
-    
-    & .testimonial {
-        height:100%;
-        width:100%;
-        overflow: hidden;
-    }
-    & .hero {
-        height:500px;
-        padding:50px 0;
-        text-align:center;
-        position:relative;
-    }
-    & .cont {
-        width:800px;
-        height:400px;
-        position: absolute;
-        top:50%;
-        left:50%;
-        transform:translate(-50%,-50%);
-    } 
-    & .slide-row {
-        display:flex;
-        width:2600px;
-        transition:.5s;
-    }
-    & .slide-col {
-        width:800px;
-        height:400px;
-        position:relative;
-    }
-   & .user-text {
-        height:100%;
-        display:flex;
-        flex-direction:column;
-        justify-content: center;
-        align-items: center;
+        background-image: url('../../assets/images/bg-pattern.jpg');
+        background-size:cover;
+        color:var(--text-color-white);
         
-    }
-    & .user-text p {
-        font-family: variables.$play;
-        font-style:italic;
-        font-size:20px;
-        font-weight:300;
-        letter-spacing:2px;
-    }
-    & .user-text h4 {
-        text-transform: uppercase;
-        font-size:15px;
-    }
-    & .indicator {
-        position: absolute;
-        left:50%;
-        transform:translate(-50%, -50%);
-        bottom:-50px;
-    }
-    & span.btnn {
-        display:inline-block;
-        height:15px;
-        width:15px;
-        margin:4px;
-        border-radius:15px;
-        background:rgb(255, 255, 255);
-        cursor:pointer;
-        transition:.5s;
-    }
-    & span.btnn.active {
-        width:45px;
-    }
-    }
+        & .testimonial {
+            min-height:100%;
+            width:100%;
+            overflow: hidden;
+        }
+        & .hero {
+            min-height:500px;
+            padding:50px 0;
+            text-align:center;
+            position:relative;
+        }
+        & .cont {
+            width:100%;
+            min-height:400px;
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform:translate(-50%,-50%);
+        } 
+        & .slide-row {
+            display:flex;
+            width:100%;
+            transition:.5s;
+        }
+        & .slide-col {
+            min-width:100%;
+            min-height:400px;
+            position:relative;
+            padding:0 10px;
+            display:flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
+        }
+       & .user-text {
+            max-width:500px;
+            display:flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
+            
+        }
+        & .user-text p {
+            font-family: variables.$play;
+            font-style:italic;
+            font-size:20px;
+            font-weight:300;
+            letter-spacing:2px;
+        }
+        & .user-text h4 {
+            text-transform: uppercase;
+            font-size:15px;
+        }
+        & .indicator {
+            position: absolute;
+            left:50%;
+            transform:translate(-50%, -50%);
+            bottom:-50px;
+        }
+        & span.btnn {
+            display:inline-block;
+            height:15px;
+            width:15px;
+            margin:4px;
+            border-radius:15px;
+            background:rgb(255, 255, 255);
+            cursor:pointer;
+            transition:.5s;
+        }
+        & span.btnn.active {
+            width:45px;
+        }
+        }
    
 
 .partners {
@@ -219,7 +224,7 @@ i {
     &__logo-box {
         display:flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         flex-wrap:wrap;
     }
