--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -42,13 +42,45 @@
             border-bottom:1px solid #FFF;
             width:125px;
         }
-        & a {
-            text-decoration: none;
-            color:unset;
-        }
-        & a:hover {
-            color:unset;
-            opacity:0.7;
-        }
+       
     }
+}
+.popup-menu {
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100vw;
+    height:100vh;
+    z-index:9;
+    background-color:var(--text-color-black);
+    & i {
+        color:var(--text-color-white);
+        font-size:2em;
+        position:fixed;
+        right:10px;
+        top:10px;
+    }
+    & img {
+        max-width:200px;
+    }
+    &__content {
+        height:100%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction:column;
+        gap:20px;
+    }
+    & div {
+        height:100%;
+    }
+    & nav a {
+        color:var(--text-color-white);
+        text-align: center;
+    }
+    & ul {
+    padding:0;
+    }
+
 }
