--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -23,7 +23,7 @@ i {
     &__big--white,
     &__big--itali c {
         text-align: center;
-        color: var(--text-color-white);
+        color: red;
 
     }
 
